👨‍💻 Dev (Video player temp fix)

--- a/src/main/resources/templates/layout/admin.html
+++ b/src/main/resources/templates/layout/admin.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html
-        data-bs-theme="dark" data-bs-theme-base="zinc" data-bs-theme-primary="azure" data-bs-theme-radius="1.5"
-        lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html data-bs-theme="dark" data-bs-theme-base="zinc" data-bs-theme-primary="azure" data-bs-theme-radius="1.5" lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -23,7 +21,7 @@
             </button>
             <div class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
                 <a href="/" aria-label="BlogSpring">
-                    <img src="/logo/main-logo.png" width="100" alt="">
+                    <img src="http://localhost:8080/assets/images/emojify.gif" width="35" class="rounded" alt="">
                 </a>
             </div>
             <div class="navbar-nav flex-row order-md-last">
