--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -10,7 +10,7 @@
     <div class="page">
         <div class="container-fluid">
             <div class="row min-vh-100 d-flex align-items-center justify-content-center">
-                <div class="col-md-2">
+                <div class="col-3">
                     <div class="card card-md align-middle">
                         <div class="card-body">
                             <h2 class="h2 text-center mb-4">Login to your account</h2>
